--- a/NetSnifferApp/Properties/Resources.resx
+++ b/NetSnifferApp/Properties/Resources.resx
@@ -817,4 +817,7 @@
   <data name="Host1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Host.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="explamation_mark" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\explamation_mark.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
